# C_image_filter

./: CMakeLists.txt  Makefile  ip_lib.c  ip_lib.h  main_iplib  report.txt
